--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,30 +9,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <script src="./src/index.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    rel="stylesheet">
     <title>Password Generator</title>
 </head>
+
 <body>
     <main>
-        <h1>Password Generator</h1>
-        
-            <form>
-                <input class="pass" type="" value="Password" disabled><br>
+        <h1 class="title">Password Generator</h1>
 
-                <input type="checkbox" name="letters" id="">
-                <label for="letters">Incluir letras</label><br>
+        <form class="form-container" id="form">
+            <input class="pass" name="pass" type="text" value="Password" disabled>
+            <button class="copy"><span class="material-symbols-outlined">
+                content_copy
+                </span></button>
+            <br>
 
-                <input type="checkbox" name="numbers" id="">
-                <label for="numbers">Incluir numeros</label><br>
+            <label for="length">Password length</label> <span class="pass-len"></span>
+            <input type="range" name="length" id="" min="10" max="100">
+            <br>
 
-                <input type="checkbox" name="chars" id="">
-                <label for="chars">Incluir caracteres especiales</label><br>
+            <input type="checkbox" name="letters" id="">
+            <label for="letters">Include letters</label><br>
 
-                <input type="checkbox" name="words" id="">
-                <label for="words">Incluir palabras</label><br>
+            <input type="checkbox" name="numbers" id="">
+            <label for="numbers">Include numbers</label><br>
 
-                <button type="submit">Generar password</button>
-            </form>
+            <input type="checkbox" name="chars" id="">
+            <label for="chars">Include special characters</label><br>
+
+            <input type="checkbox" name="words" id="">
+            <label for="words">Include words</label><br>
+
+            <button type="submit" class="generate-button">Generate password</button>
+        </form>
     </main>
+    <script src="./src/index.js"></script>
 </body>
+
 </html>
