--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    rel="stylesheet">
     <title>Password Generator</title>
 </head>
 
@@ -20,9 +19,9 @@
 
         <form class="form-container" id="form">
             <input class="pass" name="pass" type="text" value="Password" disabled>
-            <button class="copy"><span class="material-symbols-outlined">
+            <button class="copy" type="button"><span class="material-symbols-outlined">
                 content_copy
-                </span></button>
+            </span></button>
             <br>
 
             <label for="length">Password length</label> <span class="pass-len"></span>
